notes added and css updated

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,13 +19,28 @@ body{
     font-family: 'Amatic SC', cursive;
     font-size: 30px;
 }
+#navbar-links{
+    font-family: 'Lobster', cursive;
+}
+h1{
+    font-family: 'Acme', sans-serif;
+}
 .parallax{
+    height: auto;
     max-height: 300px
 }
 .searchHide{
     display: none;
 }
+#searchButton{
+    font-family: 'Acme', sans-serif;
+    font-size: 20px
+}
 #footer{
     height: 25px;
-    font-size: 20px;
+    font-size: 15px;
+    color: white;
+    padding: 3px;
+    border-top: #49b1c2 2px ridge;
+    font-family: 'Amatic SC', cursive;
 }
