--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,10 @@ h1{
     font-family: 'Acme', sans-serif;
     font-size: 20px
 }
+#tripTableTop{
+    font-size: 20px;
+    text-decoration: underline #26a69a;
+}
 #mytripsTable{
     font-family: 'Acme', sans-serif;
 }
