--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,8 +67,18 @@ h1{
     border-top: #49b1c2 2px ridge;
     font-family: 'Amatic SC', cursive;
 }
+@media only screen and (max-width: 1050px) {
+    .parallax-container{
+        height: 300px
+    }
+  }
 @media only screen and (max-width: 800px) {
     .parallax-container{
         height: 250px
+    }
+  }
+@media only screen and (max-width: 500px) {
+    .parallax-container{
+        height: 150px
     }
   }
