--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,6 +40,13 @@ h1{
     font-family: 'Acme', sans-serif;
     font-size: 20px
 }
+.card{
+    width: 300px;
+}
+.resize{
+    width: 300px;
+    height: 300px;
+}
 #tripTableTop{
     font-size: 20px;
     text-decoration: underline #26a69a;
